ajustes no background

--- a/index.html
+++ b/index.html
@@ -14,13 +14,13 @@
 </head>
 <body>
     <div class="card">
-        <img class="img_1" src="illustration-hero.svg" alt="">
+        <img class="img_1" src="desafio/design/illustration-hero.svg" alt="">
         <h1>Order Summary</h1>
         <p><b>You can now listen to millions of songs, audiobocks, and podcasts on any device anywhere you like!</b></p>
 
         <div class="grid">    
             <div class="item-1">
-                <img src="icon-music.png" alt="icone-musica">
+                <img src="desafio/design/icon-music.svg" alt="icone-musica">
             </div>
             <div class="item-2">
                 <ul>
@@ -36,7 +36,7 @@
 
         <div class="btn">
             <button>
-                Proceed to Payment
+                <p>Proceed to Payment</p>
             </button>
 
             <p>Cancel Order</p>
